refactor : WinnerRank -> Rank로 리팩토링
Winner가 붙지 않아도 '당첨 등수'라는 의미가 전해지기 때문에 삭제
WinnerRank -> Rank, WinnerRankDeterminer -> RankDeterminer